--- a/style.css
+++ b/style.css
@@ -9,6 +9,16 @@ img{
 }
 .background {
   position: absolute;
+  top: 0px;
+  left: 0px;
   height: 100%;
   width: 100%;
+}
+
+#time{
+  color: white;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  z-index: 2;
 }
